--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-redux": "^7.0.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts-ts": "^3.1.0"
+    "react-redux": "^6.0.1",
+    "react-scripts-ts": "^3.1.0",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
