--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-redux": "^7.0.2",
+    "@material-ui/core": "^3.1.2",
+    "@material-ui/icons": "^3.0.1",
+    "apollo-client": "^2.4.2",
+    "classnames": "^2.2.6",
+    "draft-js": "^0.10.5",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.9.2",
+    "prop-types": "^15.6.2",
     "react": "^16.8.4",
+    "react-apollo": "^2.2.3",
+    "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.8.4",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-redux": "^6.0.1",
     "react-scripts-ts": "^3.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -17,10 +30,13 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/graphql": "^14.0.5",
     "@types/jest": "^24.0.9",
     "@types/node": "^11.10.5",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
+    "@types/react-redux": "^7.0.2",
+    "@types/react-router-dom": "^4.3.1",
     "typescript": "^3.3.3333"
   }
 }
