--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "react": "^16.8.4",
     "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-redux": "^6.0.1",
     "react-scripts-ts": "^3.1.0",
+    "react-select": "^2.4.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
@@ -29,9 +30,12 @@
     "@types/jest": "^24.0.9",
     "@types/node": "^11.10.5",
     "@types/react": "^16.8.7",
+    "@types/react-beautiful-dnd": "^10.0.3",
     "@types/react-dom": "^16.8.2",
     "@types/react-redux": "^7.0.2",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-select": "^2.0.14",
+    "@types/uuid": "^3.4.4",
     "typescript": "^3.3.3333"
   }
 }
