--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.1.2",
-    "@material-ui/icons": "^3.0.1",
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
     "classnames": "^2.2.6",
-    "draft-js": "^0.10.5",
+    "draft-js": "^0.11.0",
     "prop-types": "^15.6.2",
-    "react": "^16.8.4",
-    "react-beautiful-dnd": "^9.0.2",
-    "react-dom": "^16.8.4",
-    "react-redux": "^6.0.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "^3.1.0",
-    "react-select": "^2.4.1",
-    "redux": "^4.0.1",
+    "react": "^16.8.6",
+    "react-beautiful-dnd": "^11.0.4",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts-ts": "^4.0.8",
+    "react-select": "^3.0.4",
+    "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
@@ -27,15 +27,23 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.9",
-    "@types/node": "^11.10.5",
-    "@types/react": "^16.8.7",
-    "@types/react-beautiful-dnd": "^10.0.3",
-    "@types/react-dom": "^16.8.2",
-    "@types/react-redux": "^7.0.2",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/react-select": "^2.0.14",
-    "@types/uuid": "^3.4.4",
-    "typescript": "^3.3.3333"
-  }
+    "@material-ui/lab": "^4.0.0-alpha.20",
+    "@types/draft-js": "^0.10.34",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.6.8",
+    "@types/react": "^16.8.23",
+    "@types/react-beautiful-dnd": "^11.0.2",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.1.1",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/react-select": "^3.0.0",
+    "@types/uuid": "^3.4.5",
+    "typescript": "^3.5.3"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
